examples/test/testpolicy17892.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17892
  namespace: namespace153
spec:
  podSelector:
    matchLabels:
      key39: value27
      key21: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value6
          key15: value28
          key1: value17
      podSelector:
        matchLabels:
          key42: value33
